# qtDemo

./: Readme.md
cmake例子/: readme.md
cmake例子/HelloCMake/: CMakeLists.txt  main.cpp  main.cpp.autosave
demo/: widget.cpp  widget.h  widget.ui
定时器/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
桌面取色器/myGetColorValueTools/: frmmain.cpp  frmmain.h  main.cpp  myGetColorValueTools.pro  myGetColorValueTools.pro.user.4
